2008-01-xx release: 0.4.0
  * fix: helper/grid color changes in Tools->Preferences|Advanced weren't saved
  * fix: aspect ratio was never saved into configfile
	* fix: changing stuff in `Background color' had some weird behaviour, not
			updating properties
	* fix: if image has no file extension, try .tga (thanks alienpl)
  * chg: config preview is now default off
  * add: Help menu has links to cpma/q4max SuperHud wiki and Editor website

2008-01-18 release: 0.3.0
  * complete rewrite: 
  * add: elements can be reset (i.e. everything except visibility is put back to default)
  *	add: copy&paste can be accessed everywhere with Ctrl+C/Ctrl+V
  * add: you may now select multiple elements at once and apply an action
    - reset 
    - reorder in elements list (drag&drop)
    - change position on hud (drag&drop on hud)
    - paste (previously copied properties)
    - delete (only removable elements)
  * add: group several elements with similar names into collections (which can
      be all selected	at once by clicking on the collection title)
  * add: put focus on elements list (F7) or hud (F8)
  * add: in elements list: press a key (a-z) to select next element that
      begins with that key.
  * add: correct default hud loaded (directly from game pak)
  * add: Tools->Convert HUD - convert hudfiles to widescreen with various
      conversion options. also, prompt user to decide what to do if there is
      discrepancy in HUD aspect ratio	and view aspect ratio.
  * add: possibility to implement other games with SuperHud style Head-up
      displays
  * add: support for renamed Pre/PostDecorate in cpma-1.44 (you still can load
      huds from previous versions but it will be saved for >=cpma-1.44)
  * add: a grid (of points), elements can snap to (defaults to 12x12)
  * add: a pak file browser (with image preview)
  * add: commandline support for opening a hudfile (superhudeditor.exe [filename])
  * add: correct rendering of WeaponList!